[gd_scene load_steps=2 format=3 uid="uid://bqm8x3yf2h8dp"]

[ext_resource type="Script" path="res://engine/actors/CharacterRig2D.gd" id="1_character_rig"]

[node name="CharacterRig2D" type="Skeleton2D"]
script = ExtResource("1_character_rig")

[node name="Root" type="Bone2D" parent="."]

[node name="Hips" type="Bone2D" parent="Root"]
position = Vector2(0, 20)

[node name="Torso" type="Bone2D" parent="Root/Hips"]
position = Vector2(0, -40)

[node name="Head" type="Bone2D" parent="Root/Hips/Torso"]
position = Vector2(0, -30)

[node name="LeftUpperArm" type="Bone2D" parent="Root/Hips/Torso"]
position = Vector2(-20, -20)

[node name="LeftLowerArm" type="Bone2D" parent="Root/Hips/Torso/LeftUpperArm"]
position = Vector2(-25, 0)

[node name="LeftHand" type="Bone2D" parent="Root/Hips/Torso/LeftUpperArm/LeftLowerArm"]
position = Vector2(-20, 0)

[node name="RightUpperArm" type="Bone2D" parent="Root/Hips/Torso"]
position = Vector2(20, -20)

[node name="RightLowerArm" type="Bone2D" parent="Root/Hips/Torso/RightUpperArm"]
position = Vector2(25, 0)

[node name="RightHand" type="Bone2D" parent="Root/Hips/Torso/RightUpperArm/RightLowerArm"]
position = Vector2(20, 0)

[node name="LeftUpperLeg" type="Bone2D" parent="Root/Hips"]
position = Vector2(-12, 0)

[node name="LeftLowerLeg" type="Bone2D" parent="Root/Hips/LeftUpperLeg"]
position = Vector2(0, 35)

[node name="LeftFoot" type="Bone2D" parent="Root/Hips/LeftUpperLeg/LeftLowerLeg"]
position = Vector2(0, 25)

[node name="RightUpperLeg" type="Bone2D" parent="Root/Hips"]
position = Vector2(12, 0)

[node name="RightLowerLeg" type="Bone2D" parent="Root/Hips/RightUpperLeg"]
position = Vector2(0, 35)

[node name="RightFoot" type="Bone2D" parent="Root/Hips/RightUpperLeg/RightLowerLeg"]
position = Vector2(0, 25)